--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "@angular-devkit/core": "0.4.5",
     "@angular-devkit/schematics": "0.4.5",
-    "@types/jasmine": "^2.8.6",
-    "@types/node": "^8.0.31",
-    "jasmine": "^3.1.0",
+    "@types/jasmine": "2.8.6",
+    "@types/node": "^8.9.5",
+    "jasmine": "3.1.0",
     "typescript": "2.7.2"
   },
   "repository": "git@github.com:Hotell/ng-cli-schematics.git"
