--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,23 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
+    "rootDir": "src/",
+    "outDir": "out-tsc",
     "lib": [
       "es2017",
       "dom"
     ],
+    "target": "es2015",
     "module": "commonjs",
     "moduleResolution": "node",
+    "strict": true,
     "noEmitOnError": true,
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
     "noUnusedParameters": true,
     "noUnusedLocals": true,
-    "rootDir": "src/",
     "skipDefaultLibCheck": true,
     "skipLibCheck": true,
     "sourceMap": true,
-    "strictNullChecks": true,
-    "target": "es6",
     "types": [
       "jasmine",
       "node"
