build(npm): change scope name to valid casing

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@martin_hotell/schematics",
+  "name": "@mhotell/schematics",
   "version": "0.0.0",
   "description": "Angular CLI schematics with better defaults",
   "scripts": {
