chore(schematics): copy base schemas from @schematics/angular

--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     }
   },
   "lint-staged": {
-    "{src,e2e}/**/*.{js,jsx,ts,tsx}": [
+    "{src}/**/*.{js,jsx,ts,tsx}": [
       "yarn lint",
       "git add"
     ],
-    "{src,e2e}/**/*.{js,jsx,ts,tsx,css,scss,md}": [
+    "{src}/**/*.{js,jsx,ts,tsx,css,scss,md}": [
       "prettier --write",
       "git add"
     ]
