--- a/src/application/files/package.json
+++ b/src/application/files/package.json
@@ -4,11 +4,26 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "start": "ng serve --aot",
+    "build": "ng build --prod",<% if (!minimal) { %>
+    "test": "jest --watch",
+    "test:ci": "jest --runInBand",
+    "test:coverage": "jest --coverage",
+    "e2e": "testcafe-live chrome e2e/**/*.e2e-spec.ts",
+    "e2e:ci": "testcafe all e2e/**/*.e2e-spec.ts --app 'npm start' --app-init-delay 5000",<% } %>
+    "lint": "ng lint --format codeFrame --fix",
+    "format": "prettier {src,e2e}/**/*.{ts,tsx,json,md,scss,css,less} --write",
+    "style": "npm run format && npm run lint"
+  },
+  "lint-staged": {
+    "{src,e2e}/**/*.{js,jsx,ts,tsx}": [
+      "npm run lint",
+      "git add"
+    ],
+    "{src,e2e}/**/*.{js,jsx,ts,tsx,css,scss,less,md}": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "private": true,
   "dependencies": {
@@ -22,28 +37,25 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",<% if (serviceWorker) { %>
     "@angular/service-worker": "^5.2.0",<% } %>
-    "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "core-js": "2.5.3",
+    "rxjs": "5.5.7",
+    "zone.js": "0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "~<%= version %>",
     "@angular/compiler-cli": "^5.2.0",
     "@angular/language-service": "^5.2.0",<% if (!minimal) { %>
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.1.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~1.4.1",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.0",
-    "tslint": "~5.9.1",<% } %>
-    "typescript": "~2.5.3"
+    "@types/node": "8.9.4",
+    "jest": "22.4.2",
+    "jest-preset-angular": "5.2.1",
+    "testcafe": "0.19.1",
+    "testcafe-live": "0.1.3",<% } %>
+    "codelyzer": "4.2.1",
+    "tslint": "5.9.1",
+    "tslint-config-prettier": "1.10.0",
+    "husky": "0.14.3",
+    "lint-staged": "7.0.0",
+    "prettier": "1.11.1",
+    "typescript": "2.6.2",
   }
 }
