feat(application): update tslint,add prettier config, vscode config

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,13 @@ out-tsc
 # IDEs
 .idea/
 jsconfig.json
-.vscode/
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # Misc
 node_modules/
