--- a/src/application/files/tsconfig.json
+++ b/src/application/files/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "pretty": true,
     "strict": true,
+    "skipLibCheck": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
