--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "prebuilt": "yarn verify",
     "build": "tsc",
     "test": "tsc && jasmine **/*_spec.js",
-    "format": "prettier src/**/*.{ts,js,json,md,scss,less,css} --config .prettierrc",
-    "lint": "tslint --project tsconfig.json --format codeFrame",
-    "verify": "yarn format --list-different && yarn test",
+    "format": "prettier src/**/*.{ts,js,json,md,scss,less,css} --config .prettierrc --write",
+    "lint": "tslint --project tsconfig.json --format codeFrame --fix",
+    "style": "yarn format && yarn lint",
+    "verify": "yarn format -l && yarn lint && yarn test",
     "cz": "git-cz",
     "prerelease": "yarn build",
     "release": "standard-version",
