--- a/src/application/files/package.json
+++ b/src/application/files/package.json
@@ -52,11 +52,12 @@
     "testcafe": "0.19.1",
     "testcafe-live": "0.1.3",<% } %>
     "codelyzer": "4.2.1",
-    "tslint": "5.9.1",
-    "tslint-config-prettier": "1.10.0",
     "husky": "0.14.3",
     "lint-staged": "7.0.0",
     "prettier": "1.11.1",
+    "tslint": "5.9.1",
+    "tslint-config-prettier": "1.10.0",
+    "tslint-config-standard": "7.0.0",
     "typescript": "2.6.2",
   }
 }
