feat(application): add custom 'new' schematic with better CLI defaults (#1)
* feat(application): add jest,testcafe,prettier

* feat(application): update tslint,add prettier config, vscode config

* feat(application): add jest setup files

* feat(application): add e2e setup

* test(application): update tests

* chore(application): bump ng versions and format browser

* build(npm): setup commitlint within package.json

* feat(application): add precommit hook

* build(npm): update verify script

* test(application): update tests and remove test.ts karma setup file

* feat(application): add better tslint defaults

* chore: update test glob

--- a/src/application/files/tsconfig.json
+++ b/src/application/files/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "pretty": true,
+    "strict": true,
+    "skipLibCheck": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
@@ -11,9 +14,17 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "baseUrl": ".",
+    "paths": {},
     "lib": [
       "es2017",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "skipMetadataEmit": true,
+    "strictInjectionParameters": true,
+    "preserveWhitespaces": false
   }
 }
