--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "prebuilt": "yarn verify",
     "build": "tsc",
-    "test": "tsc && jasmine **/*_spec.js",
-    "format": "prettier src/**/*.{ts,js,json,md,scss,less,css} --config .prettierrc",
-    "lint": "tslint --project tsconfig.json --format codeFrame",
-    "verify": "yarn format --list-different && yarn test",
+    "test": "tsc && jasmine src/**/*_spec.js",
+    "format": "prettier src/**/*.{ts,js,json,md,scss,less,css} --config .prettierrc --write",
+    "lint": "tslint --project tsconfig.json --format codeFrame --fix",
+    "style": "yarn format && yarn lint",
+    "verify": "yarn format -l && yarn lint && yarn test",
     "cz": "git-cz",
     "prerelease": "yarn build",
     "release": "standard-version",
@@ -26,6 +27,12 @@
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "commitlint": {
+    "extends": ["@commitlint/config-conventional"],
+    "rules": {
+      "header-max-length": [2, "always", 100]
     }
   },
   "lint-staged": {
