--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "@martin_hotell/schematics",
   "version": "0.0.2",
   "description": "Angular CLI schematics with better defaults",
+  "engines": {
+    "node": ">=8.9.0"
+  },
   "scripts": {
     "prebuilt": "yarn verify",
     "build": "tsc",
@@ -52,7 +55,7 @@
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
     "@types/jasmine": "2.8.6",
-    "@types/node": "^8.9.5",
+    "@types/node": "~8.9.5",
     "commitizen": "2.9.6",
     "husky": "0.14.3",
     "jasmine": "3.1.0",
