--- a/package.json
+++ b/package.json
@@ -33,9 +33,15 @@
     }
   },
   "commitlint": {
-    "extends": ["@commitlint/config-conventional"],
+    "extends": [
+      "@commitlint/config-conventional"
+    ],
     "rules": {
-      "header-max-length": [2, "always", 100]
+      "header-max-length": [
+        2,
+        "always",
+        100
+      ]
     }
   },
   "lint-staged": {
