--- a/package.json
+++ b/package.json
@@ -62,9 +62,12 @@
     "@commitlint/config-conventional": "6.1.3",
     "@types/jasmine": "2.8.6",
     "@types/node": "~8.9.5",
+    "chalk": "2.3.2",
     "commitizen": "2.9.6",
+    "glob": "7.1.2",
     "husky": "0.14.3",
     "jasmine": "3.1.0",
+    "json-schema-to-typescript": "5.4.0",
     "lint-staged": "7.0.0",
     "prettier": "1.11.1",
     "standard-version": "4.3.0",
