--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@ src/**/*.js
 src/**/*.js.map
 src/**/*.d.ts
 !src/**/files/**/*.d.ts
+!src/**/files/**/*.js
 !src/**/other-files/**/*.d.ts
+!src/**/other-files/**/*.js
 out-tsc
 
 # IDEs
