build: implement schemas type generation (#6)
* feat(scripts): add schema ambient types generator

* refactor: update schema imports from generated files

* build(npm): add generate task and fix prebuild hook

* fix(application): remove template js files from gitignore

Closes #5

--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
     "node": ">=8.9.0"
   },
   "scripts": {
-    "prebuilt": "yarn verify",
+    "prebuild": "yarn generate:schemas && yarn verify",
     "build": "tsc",
     "test": "tsc && jasmine src/**/*_spec.js",
     "format": "prettier src/**/*.{ts,js,json,md,scss,less,css} --config .prettierrc --write",
     "lint": "tslint --project tsconfig.json --format codeFrame --fix",
     "style": "yarn format && yarn lint",
-    "verify": "yarn format -l && yarn lint && yarn test",
+    "verify": "yarn format && yarn lint && yarn test",
+    "generate:schemas":"node scripts/generate-schema-defs.js",
     "cz": "git-cz",
     "prerelease": "yarn build",
     "release": "standard-version",
@@ -62,9 +63,12 @@
     "@commitlint/config-conventional": "6.1.3",
     "@types/jasmine": "2.8.6",
     "@types/node": "~8.9.5",
+    "chalk": "2.3.2",
     "commitizen": "2.9.6",
+    "glob": "7.1.2",
     "husky": "0.14.3",
     "jasmine": "3.1.0",
+    "json-schema-to-typescript": "5.4.0",
     "lint-staged": "7.0.0",
     "prettier": "1.11.1",
     "standard-version": "4.3.0",
