chore(ide): add extension recommend and associate templates to ejs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "tslint.enable": true
+  "tslint.enable": true,
+  "files.associations": {
+    "**/files/**/*.json": "ejs",
+    "**/files/**/*.ts": "ejs"
+  }
 }
