chore(ide): cast html to ejs within templates

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "tslint.enable": true,
   "files.associations": {
     "**/files/**/*.json": "ejs",
-    "**/files/**/*.ts": "ejs"
+    "**/files/**/*.ts": "ejs",
+    "**/files/**/*.html": "ejs"
   }
 }
