--- a/src/application/files/package.json
+++ b/src/application/files/package.json
@@ -28,17 +28,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.9",
+    "@angular/animations": "^5.2.9",<% if (material) { %>
+    "@angular/cdk": "^5.2.4",<% } %>
     "@angular/common": "^5.2.9",
     "@angular/compiler": "^5.2.9",
     "@angular/core": "^5.2.9",
     "@angular/forms": "^5.2.9",
-    "@angular/http": "^5.2.9",
+    "@angular/http": "^5.2.9",<% if (material) { %>
+    "@angular/material": "^5.2.4",<% } %>
     "@angular/platform-browser": "^5.2.9",
     "@angular/platform-browser-dynamic": "^5.2.9",
     "@angular/router": "^5.2.9",<% if (serviceWorker) { %>
     "@angular/service-worker": "^5.2.9",<% } %>
-    "core-js": "2.5.3",
+    "core-js": "2.5.3",<% if (material) { %>
+    "hammerjs": "^2.0.8",<% } %>
     "rxjs": "5.5.7",
     "zone.js": "0.8.20"
   },
