build: replace jasmine with jest
Closes #2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "types": [
-      "jasmine",
+      "jest",
       "node"
     ],
     // @lint rules
