--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   "scripts": {
     "prebuild": "yarn generate:schemas && yarn verify",
     "build": "tsc",
-    "test": "tsc && jasmine src/**/*_spec.js",
+    "test": "jest --watch",
+    "test:ci": "jest --runInBand",
     "format": "prettier src/**/*.{ts,js,json,md,scss,less,css} --config .prettierrc --write",
     "lint": "tslint --project tsconfig.json --format codeFrame --fix",
     "style": "yarn format && yarn lint",
-    "verify": "yarn format && yarn lint && yarn test",
+    "verify": "yarn format && yarn lint && jest --bail",
     "generate:schemas": "node scripts/generate-schema-defs.js",
     "cz": "git-cz",
     "prerelease": "yarn build",
@@ -28,6 +29,19 @@
   "license": "MIT",
   "schematics": "./src/collection.json",
   "repository": "git@github.com:Hotell/ng-cli-schematics.git",
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/|_)(test|spec))\\.(tsx?)$",
+    "testPathIgnorePatterns": ["<rootDir>/.*/(files|other-files)", "<rootDir>/node_modules/"],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx"
+    ]
+  },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
@@ -61,17 +75,18 @@
     "@angular-devkit/schematics": "0.4.6",
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
-    "@types/jasmine": "2.8.6",
+    "@types/jest": "22.2.0",
     "@types/node": "~8.9.5",
     "chalk": "2.3.2",
     "commitizen": "2.9.6",
     "glob": "7.1.2",
     "husky": "0.14.3",
-    "jasmine": "3.1.0",
+    "jest": "22.4.2",
     "json-schema-to-typescript": "5.4.0",
     "lint-staged": "7.0.0",
     "prettier": "1.11.1",
     "standard-version": "4.3.0",
+    "ts-jest": "22.4.1",
     "tslint": "5.9.1",
     "tslint-config-prettier": "1.10.0",
     "tslint-config-standard": "7.0.0",
