--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "@angular-devkit/schematics": "0.4.8",
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
-    "@types/jest": "22.2.1",
-    "@types/node": "~8.9.5",
+    "@types/jest": "22.2.2",
+    "@types/node": "8.10.3",
     "chalk": "2.3.2",
     "commitizen": "2.9.6",
     "glob": "7.1.2",
