--- a/package.json
+++ b/package.json
@@ -74,8 +74,8 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@angular-devkit/core": "0.4.8",
-    "@angular-devkit/schematics": "0.4.8",
+    "@angular-devkit/core": "0.5.4",
+    "@angular-devkit/schematics": "0.5.4",
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
     "@types/jest": "22.2.2",
@@ -88,6 +88,7 @@
     "json-schema-to-typescript": "5.4.0",
     "lint-staged": "7.0.4",
     "prettier": "1.11.1",
+    "rxjs": "5.5.8",
     "standard-version": "4.3.0",
     "ts-jest": "22.4.1",
     "tslint": "5.9.1",
