--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@angular-devkit/schematics": "0.5.4",
     "@commitlint/cli": "6.1.3",
     "@commitlint/config-conventional": "6.1.3",
+    "@schematics/angular": "0.5.4",
     "@types/jest": "22.2.2",
     "@types/node": "8.10.3",
     "chalk": "2.3.2",
